objects/AuthenticationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccessType__c</fullName>
        <label>AccessType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CryptoKey__c</fullName>
        <label>CryptoKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EncryptedData__c</fullName>
        <label>EncryptedData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>OrganizationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicePlatformURL__c</fullName>
        <label>ServicePlatformURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Voxer Event Monitoring Plus Auth Setting</label>
</CustomObject>